# snowreads

./: .gitignore  Metadata.md  README.md  arXiv_pdf_manifest.xml  arXiv_src_manifest.xml  arxiv_parser.py  package-lock.json  package.json  readme.MD
abs-indexer/: Cargo.toml
add-paper/: .env  Cargo.toml
add-paper/src/: arxiv.rs  categories.rs  category.rs  collections.rs  lib.rs  main.rs  oai.rs
app/: hashes.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.tsbuildinfo
data/: oai-metadata-collections.json
healthcheck/: fix-collections.ts  fix-file.ts  healthcheck.ts  package.json
json_stripper/: README.MD  package.json  test.json  tsconfig.json
metadata-mashup/: .env  Cargo.toml
metadata-mashup/output/: .gitignore
metadata-mashup/output/combine/: combine-datacite-arxiv.ts  combine-oai.ts  package.json
metadata-mashup/src/: arxiv.rs  datacite.rs  fetches.rs  lib.rs  main.rs  oai.rs
metadata_fetcher/: arxiv_parser.py  license_filter.py  metadata_collector.py  requirements.txt
prebuilt/: index-to-prebuilt.ts  package.json  pnpm-lock.yaml  ws-resources.json
publish/: append-abs-json.sh  calc-size.js  check-license.ts  collection-size.ts  package.json  pnpm-lock.yaml  pre-publish.sh  remove-duplicate-papers.ts  store.sh  tsconfig.json  untar-check.sh  update-jsons.js
remove-public-abs/: .env  Cargo.toml
remove-public-abs/src/: categories.rs  main.rs
scripts/: abs.interface.ts  append-abs-json.sh  calc-size.js  check-license.ts  chunkify.ts  collection-size.ts  combine-oai.ts  create-index.ts  (+20 more)
(+68013 files in other folders)
